examples/illtyped/include.gr
-- The type error is in the included file
#include "examples/illtyped/approximation.gr"

foo : Int
foo = 0
